<resources>
    <string name="app_name">MoneySaver</string>
    <string name="login_username_hint">Username or Email</string>
    <string name="login_email_button_text">Login with email</string>
    <string name="login_or_text">Or</string>
    <string name="textview_login_welcome">Welcome to MoneySaver!</string>

    <string name="masCartera">Añadir cartera</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report_nav_bar">Report</string>
    <string name="wallet_nav_bar">wallet</string>
    <string name="chronology_nav_bar">chronology</string>
    <string name="planning_nav_bar">planning</string>

    <string name="textview_chronology_balance">200,00 €</string>
    <string name="amount">150 €</string>
    <string name="date">Hoy</string>
    <string name="Category">Regalos</string>
    <string name="TransactionAmount">50 €</string>
    <string name="ImgCategory">TODO</string>
    <string name="TransactionDescription">Descripción de la transacción</string>
    <!--string wallet-->
    <string name="wallet">Wallet</string>
    <string name="name">Name</string>
    <string name="close">Close</string>
    <string name="category">Category</string>
    <string name="share">Share</string>
    <string name="salary">Salary</string>
    <string name="coin">Coin</string>
    <string name="createWallet">Create Wallet</string>
    <string name="walletTC">Total wallets</string>
    <string name="walletDinero">20$</string>
    <string name="carolina">Carolina</string>

    <string name="facebook_app_id">322197619283650</string>
    <string name="fb_login_protocol_scheme">fb322197619283650</string>
    <string-array name="Currency">
        <item>EUR</item>
        <item>DOLLAR</item>

    </string-array>

    <string-array name="frequency">
        <item>1</item>
        <item>3</item>
        <item>7</item>
    </string-array>

</resources>
