<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WalletFragment" >




        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/green"
            android:layout_weight="1.3"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/atras"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                android:src="@android:drawable/ic_menu_revert"
                android:contentDescription="@string/wallet" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tituloCartera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wallet"
                    android:textAlignment="center"
                    android:textSize="15pt" />
                <TextView
                    android:id="@+id/cuentaCartera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="15pt" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                android:src="@drawable/wallet" />
        </LinearLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_weight="1.2"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/walletTC"
            android:textSize="10pt"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/walletDinero"
            android:textSize="20pt"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/green">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextoCartera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textSize="10pt"
                    android:paddingLeft="10pt"
                    android:text="@string/carolina" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12pt"
                    android:layout_weight="0.4"
                    android:text="@string/walletDinero" />

                <ImageView
                    android:id="@+id/imageView30"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.1"
                    android:scaleType="fitStart"
                    android:src="@drawable/eye" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="@color/grey"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtMasCartera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12pt"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.3"
                    android:text="@string/masCartera" />

                <ImageView
                    android:id="@+id/btnMasCartera"
                    android:layout_marginTop="2dp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1.5"
                    android:clickable="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/plus"
                    android:contentDescription="@string/masCartera" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:src="@drawable/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/TransactionAmount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/green"
        app:itemBackground="@android:color/transparent"
        app:itemIconTint="@color/drawer_item"
        app:itemTextColor="@color/drawer_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/button_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</LinearLayout>