<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <EditText
        android:id="@+id/text_login_email"
        style="@style/EditText.Login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/login_username_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/text_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_login_icon"
        app:layout_constraintVertical_bias="0.49" />

    <EditText
        android:id="@+id/text_login_password"
        style="@style/EditText.Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login_email" />

    <Button
        android:id="@+id/button_login_email"
        style="@style/Button.login.email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_email_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login_password"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text_login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/login_or_text"
        android:textColor="#aaa"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_email" />

    <ImageButton
        android:id="@+id/button_login_facebook"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:background="@null"
        android:scaleX="0.9"
        android:scaleY="0.9"
        app:layout_constraintEnd_toStartOf="@+id/button_login_google"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_login_google"
        app:srcCompat="@drawable/ic_facebook"
        tools:ignore="SpeakableTextPresentCheck" />


    <ImageButton
        android:id="@+id/button_login_google"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:background="@null"
        android:scaleX="2.1"
        android:scaleY="2.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_login_twitter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_login_facebook"
        app:layout_constraintTop_toBottomOf="@+id/text_login_or"
        app:layout_constraintVertical_bias="0.496"
        app:srcCompat="@drawable/ic_google"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/button_login_twitter"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:background="@null"
        android:scaleX="1.1"
        android:scaleY="1.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_login_google"
        app:layout_constraintTop_toTopOf="@+id/button_login_google"
        app:srcCompat="@drawable/ic_twitter"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/image_login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView_login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textview_login_welcome"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/text_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_login_icon"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>